--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,8 @@ verify_ssl = true
 [packages]
 django = "*"
 django-rest-framework = "*"
+django-background-tasks = "*"
+python-memcached = "*"
 
 [requires]
 python_version = "3.7"
